UX: minor ux/ui fixes (#65)
- hide back to list when chat is collapsed
- translate chat.return_to_list
- adds ellipsis when channel name is too long

--- a/assets/stylesheets/drawer.scss
+++ b/assets/stylesheets/drawer.scss
@@ -89,7 +89,7 @@ $header-height: 2.5rem;
     overflow-x: hidden;
     color: var(--primary);
     .chat-channel-title {
-      display: inline-flex;
+      display: flex;
 
       .d-icon:not(.d-icon-hashtag) {
         color: var(--primary-high);
@@ -481,6 +481,7 @@ $header-height: 2.5rem;
   .chat-name {
     margin: 0 0 0 0.25em;
     font-weight: 500;
+    @include ellipsis;
   }
   .topic-chat-icon {
     color: var(--primary-medium);
